--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,11 @@
 	<link rel = "stylesheet" type = "text/css" href = "{{url_for("static", filename="main.css")}}">
 	</head>
 	<body>
-		<h1> {{message}} </h>
+		<h1> indiquez votre nom </h>
+		<form action ="." method = "POST">
+			<input type = "text" name = "text">
+			<button type = "submit"> OK </button>
+		</form>
 	</body>
+	<a href = "{{url_for("text_box")}}"> cliquez pour continuer </a>
 </html>
